[package]
name = "cursormania"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fltk = "1.3.13"
fltk-theme = "0.4.2"
home = "0.5.3"
gif = "0.11.4"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
